tests/parse_print/syntax_test/expressions/category_check/decision_domain/stderr.expected
Error:
    tests/parse_print/syntax_test/expressions/category_check/decision_domain/decisionIndomain.essence:3:17:
  |
3 | find y : int(1..x)
  |                 ^
Cannot use variable of category : decision in the context of Domain
